Fixed outstanding linting issues